--- a/CLIENT/public/CSS/mainInicial.css
+++ b/CLIENT/public/CSS/mainInicial.css
@@ -6,21 +6,17 @@ body {
 }
 
 #chat-container {
-      margin: auto;
+      /* margin: auto;
       margin-top: 10px;
       margin-bottom: 10px;
       width: 1160px;
       height: 550px;
-      /* background-color: rgb(187, 181, 181); */
-      /* background-color: rgb(51, 51, 51); */
-      background-color: rgb(201, 199, 199);
-      position: relative;
-      border:1px solid #ddd;
-
-      /* max-width: 600px;
+      background-color: rgb(187, 181, 181);
+      position: relative; */
+      max-width: 600px;
       margin: 30px auto;
       border:1px solid #ddd;
-      box-shadow: 1px 3px 5px rgba */
+      box-shadow: 1px 3px 5px rgba
 }
 
 #chat-window {
@@ -44,46 +40,33 @@ body {
       color: #555;
 }
 
-#rooms {
+ /* #rooms {
       float: left;
       width: 250px;
       height: 550px;
-      /* background-color: rgb(8, 64, 110); */
+       background-color: rgb(8, 64, 110); 
       background-color: #822252;
-      border-right:1px solid #ddd;
-
-      /* color: #fff;
+       color: #fff;
       font-size: 18px;
       border: 0;
       padding: 12px 0;
       width: 100%;
-      border-radius: 0 0 2px 2px; */
+      border-radius: 0 0 2px 2px; 
     }
   
-    /* #messagesZone {
-      float: center;
-      background: #c995af;
-      width: 65%;
+#messagesZone {
+      background: #822252;
 
-} */
+}  */
 
-#usuarisRoom {
-      float: right;
-      width: 250px;
-      height: 550px;
-      /* background-color: rgb(8, 64, 110); */
-      background-color: #5f193c;
-      border-left:1px solid #ddd;
-
-}
 
 input {
       padding: 10px 20px;
       box-sizing:  border-box;
       border: 0;
       background:  #eee;
-      /* display: block; */
-      width: 85%;
+      display: block;
+      width: 100%;
 }
 
 button {
@@ -92,6 +75,6 @@ button {
       font-size: 18px;
       border: 0;
       padding: 12px 0;
-      width: 85%;
+      width: 100%;
       border-radius: 0 0 2px 2px;
 }
