--- a/CLIENT/public/CSS/xatStyles.css
+++ b/CLIENT/public/CSS/xatStyles.css
@@ -50,7 +50,8 @@ body {
       position: relative;
       padding-bottom: 1rem;
 
-      
+      /* background: rgb(18, 18, 18); */
+
       background-color: rgb(201, 199, 199);
       /* position: relative; */
       border: 1px solid #ddd;
@@ -98,6 +99,27 @@ body {
       border-radius: 0 0 2px 2px; */
 }
 
+
+#showCurrentRoom {
+      color: rgb(205, 111, 186);
+      /* font-family: 'Neucha', cursive; */
+      font-family: 'Marcellus', serif;
+
+      
+}
+
+
+#usersList{
+      /* color: rgb(115, 24, 143); */
+      /* color: rgb(32, 32, 32); */
+      /* color: rgb(205, 111, 186); */
+      color: #fff;
+      font-family: 'Marcellus', serif;
+      font-size: 25px;
+
+}
+
+
 #usuarisRoom {
       float: right;
       width: 35%;
@@ -113,7 +135,7 @@ body {
       position: relative;
 
       padding: 14px 0;
-      margin: 0 20 px;
+      /* margin: 0 20 px; */
       border-bottom: 1px solid #e9e9e9;
       color: #555;
 }
@@ -126,6 +148,24 @@ body {
 position: fixed bottom;
       justify-content: flex-end;
 
+}
+
+
+/* //! AQUÍ ESTÁN LOS MENSAJES Y LA LISTA DE USUAROS */
+/* ul {
+      font-family: 'Marcellus', serif;
+      font-size: 20px;
+} */
+
+
+#oldMessages {
+            /* font-family: 'Neucha', cursive; */
+            /* background: rgb(32, 32, 32); */
+
+      color: rgb(59, 59, 59);
+      /* font-family: 'Crafty Girls', cursive; */
+      font-family: 'Marcellus', serif;
+      font-size: 20px;
 
 }
 
@@ -174,13 +214,6 @@ position: fixed bottom;
 
 
 
-#usersList{
-      /* color: rgb(115, 24, 143); */
-      /* color: rgb(32, 32, 32); */
-      color: rgb(205, 111, 186);
-
-}
-
 
 input {
       padding: 10px 20px;
@@ -203,9 +236,11 @@ button {
 }
 
 
-/* #roomList {
+#roomList {
       display: center;
-} */
+      /* font-family: 'Marcellus', serif; */
+
+} 
 
 
 /* .currentRooms {
@@ -217,10 +252,14 @@ button {
 
 .room-btn-active {
       color: #fff;
+      font-family: 'Marcellus', serif;
+
 }
 
 .room-btn-active:hover {
       color: rgb(205, 111, 186);
+      font-family: 'Marcellus', serif;
+
 }
 
 
