No havia pujat la part del CLIENT

--- a/CLIENT/public/CSS/xatStyles.css
+++ b/CLIENT/public/CSS/xatStyles.css
@@ -16,6 +16,12 @@ body {
       align-items: center;
 }
 
+
+#newMessages {
+      display: none;
+}
+
+
 /* body {
       display: flex;
       flex-direction: column;
